[package]
name = "sun7game-api"
version = "0.1.0"
authors = ["Netoun <coulonnier.nicolas.44@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_cors = "0.3.0"
rocket_codegen = "0.3.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bson = "0.10.0"
mongodb = "0.3.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]