[package]
name = "sun7game-api"
version = "0.1.0"
authors = ["Netoun <coulonnier.nicolas.44@gmail.com>"]

[dependencies]
rocket = "*"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
rocket_codegen = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bson = "0.10.0"
mongodb = "0.3.7"
log = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]